# rusteam

./: .gitignore  Cargo.toml  README.md  temp.txt
.github/workflows/: codspeed.yml  run-checks.yml
benches/: region1.rs  region2.rs  region3.rs  region4.rs  region5.rs
src/: .lib.rs.swp  iapws97.rs  lib.rs
src/iapws97/: constants.rs  region_1.rs  region_2.rs  region_3.rs  region_4.rs  region_5.rs  regions.rs
tests/: region1.rs  region2.rs  region3.rs  region4.rs  region5.rs
